project(op25)
if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Release")
   message(STATUS "Build type not specified: defaulting to release.")
endif(NOT CMAKE_BUILD_TYPE)
set(CMAKE_BUILD_TYPE ${CMAKE_BUILD_TYPE} CACHE STRING "")
cmake_minimum_required(VERSION 2.8)
add_subdirectory(blocks)
add_subdirectory(imbe_vocoder)
add_subdirectory(python)
add_subdirectory(repeater)
add_subdirectory(wireshark)

