message(STATUS "THIS is a TEST")
add_library(abstract_data_unit abstract_data_unit.cc)
add_library(data_unit data_unit.cc)
add_library(data_unit_handler.cc data_unit_handler.cc)
add_library(dummy_imbe_decoder dummy_imbe_decoder.cc)
add_library(hdu hdu.cc)
add_library(imbe_decoder imbe_decoder.cc)
add_library(imbe_decoder_factory imbe_decoder_factory.cc)
add_library(ldu1 ldu1.cc)
add_library(ldu2 ldu2.cc)
add_library(logfile_du_handler logfile_du_handler.cc)
add_library(offline_imbe_decoder offline_imbe_decoder.cc)
add_library(op25 op25.cc)
add_library(op25_decoder_bf op25_decoder_bf.cc)
add_library(op25_decoder_ff op25_decoder_ff.cc)
add_library(op25_fsk4_demod_ff op25_fsk4_demod_ff.cc)
add_library(op25_fsk4_slicer_fb op25_fsk4_slicer_fb.cc)
add_library(op25_pcap_source_b op25_pcap_source_b.cc)
add_library(p25cai_du_handler p25cai_du_handler.cc)
add_library(pdu pdu.cc)
add_library(pickle pickle.cc)
add_library(snapshot_du_handler snapshot_du_handler.cc)
add_library(software_imbe_decoder software_imbe_decoder.cc)
add_library(tdu tdu.cc)
add_library(tsbk tsbk.cc)
add_library(value_string value_string.cc)
add_library(vc55_imbe_decoder vc55_imbe_decoder.cc)
add_library(voice_data_unit voice_data_unit.cc)
add_library(voice_du_handler voice_du_handler.cc)
